RESOLVED FIXED118993
Dictionary hotkey does not work on vertical text
https://bugs.webkit.org/show_bug.cgi?id=118993
Summary Dictionary hotkey does not work on vertical text
Alexey Proskuryakov
Reported 2013-07-22 15:53:56 PDT
Created attachment 207287 [details] test case Steps to reproduce: 1) Open attached test case. 2) Position the mouse pointer over some vertical text at the right hand side of the definition. 3) Three-finger tap the trackpad or press Command-Control-D EXPECTED: The text under the mouse pointer is highlighted and the Lookup popover appears ACTUAL: Nothing happens. Lookup fails silently. <rdar://problem/14478260>
Attachments
test case (1.79 KB, text/html)
2013-07-22 15:53 PDT, Alexey Proskuryakov
no flags
proposed fix (13.07 KB, patch)
2013-07-23 11:20 PDT, Alexey Proskuryakov
enrica: review+
Alexey Proskuryakov
Comment 1 2013-07-23 11:20:42 PDT
Created attachment 207340 [details] proposed fix
Enrica Casucci
Comment 2 2013-07-23 11:45:36 PDT
Comment on attachment 207340 [details] proposed fix View in context: https://bugs.webkit.org/attachment.cgi?id=207340&action=review > Source/WebCore/editing/Editor.cpp:2694 > + bool startCaretIsVertical = startCaretRect.width() == caretWidth; I think it would be more clear if you named this variable to indicate the direction of the text rather than the caret. Here caret is vertical mean text is horizontal and that confused me.
Alexey Proskuryakov
Comment 3 2013-07-23 12:08:35 PDT
Note You need to log in before you can comment on or make changes to this bug.