Source/WebCore/editing/Editor.cpp
@@ -2656,33 +2656,51 @@ String Editor::selectedText(TextIteratorBehavior behavior) const
     return plainText(m_frame->selection()->toNormalizedRange().get(), behavior).replaceWithLiteral('\0', "");
 }
 
+static inline void collapseCaretWidth(IntRect& rect)
+{
+    // FIXME: Width adjustment doesn't work for rotated text.
+    if (rect.width() == caretWidth)
+        rect.setWidth(0);
+    else if (rect.height() == caretWidth)
+        rect.setHeight(0);
+}
+
 IntRect Editor::firstRectForRange(Range* range) const
 {
-    LayoutUnit extraWidthToEndOfLine = 0;
     ASSERT(range->startContainer());
     ASSERT(range->endContainer());
 
-    IntRect startCaretRect = RenderedPosition(VisiblePosition(range->startPosition()).deepEquivalent(), DOWNSTREAM).absoluteRect(&extraWidthToEndOfLine);
-    if (startCaretRect == LayoutRect())
-        return IntRect();
+    VisiblePosition startVisiblePosition(range->startPosition(), DOWNSTREAM);
 
-    IntRect endCaretRect = RenderedPosition(VisiblePosition(range->endPosition()).deepEquivalent(), UPSTREAM).absoluteRect();
-    if (endCaretRect == LayoutRect())
-        return IntRect();
-
-    if (startCaretRect.y() == endCaretRect.y()) {
-        // start and end are on the same line
-        return IntRect(min(startCaretRect.x(), endCaretRect.x()),
-            startCaretRect.y(),
-            abs(endCaretRect.x() - startCaretRect.x()),
-            max(startCaretRect.height(), endCaretRect.height()));
+    if (range->collapsed(ASSERT_NO_EXCEPTION)) {
+        // FIXME: Getting caret rect and removing caret width is a very roundabout way to get collapsed range location.
+        // In particular, width adjustment doesn't work for rotated text.
+        IntRect startCaretRect = RenderedPosition(startVisiblePosition).absoluteRect();
+        collapseCaretWidth(startCaretRect);
+        return startCaretRect;
     }
 
-    // start and end aren't on the same line, so go from start to the end of its line
-    return IntRect(startCaretRect.x(),
-        startCaretRect.y(),
-        startCaretRect.width() + extraWidthToEndOfLine,
-        startCaretRect.height());
+    VisiblePosition endVisiblePosition(range->endPosition(), UPSTREAM);
+
+    if (inSameLine(startVisiblePosition, endVisiblePosition))
+        return enclosingIntRect(RenderObject::absoluteBoundingBoxRectForRange(range));
+
+    LayoutUnit extraWidthToEndOfLine = 0;
+    IntRect startCaretRect = RenderedPosition(startVisiblePosition).absoluteRect(&extraWidthToEndOfLine);
+    if (startCaretRect == IntRect())
+        return IntRect();
+
+    // When start and end aren't on the same line, we want to go from start to the end of its line.
+    bool textIsHorizontal = startCaretRect.width() == caretWidth;
+    return textIsHorizontal ?
+        IntRect(startCaretRect.x(),
+            startCaretRect.y(),
+            startCaretRect.width() + extraWidthToEndOfLine,
+            startCaretRect.height()) :
+        IntRect(startCaretRect.x(),
+            startCaretRect.y(),
+            startCaretRect.width(),
+            startCaretRect.height() + extraWidthToEndOfLine);
 }
 
 bool Editor::shouldChangeSelection(const VisibleSelection& oldSelection, const VisibleSelection& newSelection, EAffinity affinity, bool stillSelecting) const
